src/test/ui/suggestions/pattern-struct-with-slice-vec-field.stderr
error[E0529]: expected an array or slice, found `Vec<u32>`
  --> $DIR/pattern-struct-with-slice-vec-field.rs:21:18
   |
LL |         Foo { v: [1, 2] } => {}
   |                  ^^^^^^ pattern cannot match with input type `Vec<u32>`

error[E0529]: expected an array or slice, found `Vec<u32>`
  --> $DIR/pattern-struct-with-slice-vec-field.rs:29:18
   |
LL |         Bar { v: [1, 2] } => {}
   |                  ^^^^^^ pattern cannot match with input type `Vec<u32>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0529`.
